--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.spotify</groupId>
     <artifactId>simple-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
